--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Calculator</title>
+    <link rel="shortcut icon" href="favicon.png" sizes="64x64">
 </head>
 <body>
 
