--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="item"></div>
         <div class="item"><div id="equal" onclick="append(event)">=</div></div>
     </div>
-    <div id="footer">
+    <div id="note">
         <div>* d - to decimal</div>
         <div>* b - to binary</div>
     </div>
